@@ -18,7 +18,70 @@ set OPTIONS=-G "%VS_VERSION%"^
  -A x64^
  -D CMAKE_CONFIGURATION_TYPES=%BUILD_TYPE%^
  -D CMAKE_INSTALL_PREFIX=C:/wxWidgets-%WX_VERSION%/%BUILD_TYPE%/Installed^
- -D wxBUILD_SHARED=OFF
+ -D wxBUILD_SHARED=OFF^
+ -D wxUSE_REGEX=OFF^
+ -D wxUSE_ZLIB=OFF^
+ -D wxUSE_EXPAT=OFF^
+ -D wxUSE_LIBJPEG=OFF^
+ -D wxUSE_LIBPNG=OFF^
+ -D wxUSE_LIBTIFF=OFF^
+ -D wxUSE_LIBLZMA=OFF^
+ -D wxUSE_OPENGL=OFF^
+ -D wxUSE_SOUND=OFF^
+ -D wxUSE_TARSTREAM=OFF^
+ -D wxUSE_ZIPSTREAM=OFF^
+ -D wxUSE_DOC_VIEW_ARCHITECTURE=OFF^
+ -D wxUSE_HTML=OFF^
+ -D wxUSE_WXHTML_HELP=OFF^
+ -D wxUSE_MS_HTML_HELP=OFF^
+ -D wxUSE_XRC=OFF^
+ -D wxUSE_XML=OFF^
+ -D wxUSE_AUI=OFF^
+ -D wxUSE_PROPGRID=OFF^
+ -D wxUSE_RIBBON=OFF^
+ -D wxUSE_STC=OFF^
+ -D wxUSE_LOGGUI=OFF^
+ -D wxUSE_LOGWINDOW=OFF^
+ -D wxUSE_LOG_DIALOG=OFF^
+ -D wxUSE_MDI=OFF^
+ -D wxUSE_MDI_ARCHITECTURE=OFF^
+ -D wxUSE_MEDIACTRL=OFF^
+ -D wxUSE_RICHTEXT=OFF^
+ -D wxUSE_POSTSCRIPT=OFF^
+ -D wxUSE_AFM_FOR_POSTSCRIPT=OFF^
+ -D wxUSE_PRINTING_ARCHITECTURE=OFF^
+ -D wxUSE_SVG=OFF^
+ -D wxUSE_WEBVIEW=OFF^
+ -D wxUSE_ADDREMOVECTRL=OFF^
+ -D wxUSE_ANIMATIONCTRL=OFF^
+ -D wxUSE_BANNERWINDOW=OFF^
+ -D wxUSE_ARTPROVIDER_STD=OFF^
+ -D wxUSE_ARTPROVIDER_TANGO=OFF^
+ -D wxUSE_CALENDARCTRL=OFF^
+ -D wxUSE_COLOURPICKERCTRL=OFF^
+ -D wxUSE_DATEPICKCTRL=OFF^
+ -D wxUSE_SEARCHCTRL=OFF^
+ -D wxUSE_RICHMSGDLG=OFF^
+ -D wxUSE_RICHTOOLTIP=OFF^
+ -D wxUSE_REARRANGECTRL=OFF^
+ -D wxUSE_SPINBTN=OFF^
+ -D wxUSE_SPINCTRL=OFF^
+ -D wxUSE_JOYSTICK=OFF^
+ -D wxUSE_PRIVATE_FONTS=OFF^
+ -D wxUSE_DRAGIMAGE=OFF^
+ -D wxUSE_TIMEPICKCTRL=OFF^
+ -D wxUSE_TOOLBAR_NATIVE=OFF^
+ -D wxUSE_TOOLBAR=OFF^
+ -D wxUSE_TOOLBOOK=OFF^
+ -D wxUSE_PREFERENCES_EDITOR=OFF^
+ -D wxUSE_NOTEBOOK=OFF^
+ -D wxUSE_TREEBOOK=OFF^
+ -D wxUSE_TREELISTCTRL=OFF^
+ -D wxUSE_GIF=OFF^
+ -D wxUSE_PCX=OFF^
+ -D wxUSE_TGA=OFF^
+ -D wxUSE_IFF=OFF^
+ -D wxUSE_PNM=OFF
 
 @pushd C:\wxWidgets-%WX_VERSION%
     mkdir %BUILD_TYPE%
